feat: Documentation swagger endpoint clients.
